# Arguschain

./: .env.example  .gitignore  QUICKSTART.md  README.md  cli.py  pyproject.toml  requirements.txt  run_pipeline.py
api/: main.py
config/: __init__.py  logging.py  settings.py
detection/: benchmarks.py  benford_baseline.py  benford_engine.py  causal_engine.py  drift_monitor.py  feature_engineering.py  graph_engine.py  metrics.py  model_inference.py  model_training.py  risk_score.py  risk_scorer.py  shap_explainer.py  soroban_publisher.py  storage.py  synthetic_data.py  zk_prover.py
ingestion/: __init__.py  data_models.py  error_handler.py  horizon_streamer.py  http_client.py  synthetic_data.py  validators.py
tests/: fixtures.py
