[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arguschain-core"
version = "0.2.0"
description = "Wash trading detection for Stellar DEX using Benford's Law and ensemble ML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ArgusChain Contributors"}
]

dependencies = [
  "stellar-sdk>=10.0,<11.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.3.0",
  "numpy>=1.24.0",
  "scipy>=1.12.0",
  "pandas>=2.0.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "joblib>=1.3.0",
  "httpx>=0.25.0",
  "tenacity>=8.2.0",
  "click>=8.1.0",
  "sqlalchemy>=2.0.0",
  "prometheus-client>=0.19.0",
  "structlog>=24.0.0",
  "opentelemetry-api>=1.20.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=24.0.0",
  "flake8>=6.1.0",
  "mypy>=1.7.0",
  "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
